--- a/training_job/notebooks/train.ipynb
+++ b/training_job/notebooks/train.ipynb
@@ -30,14 +30,25 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<Experiment: artifact_location='./mlruns/2', experiment_id='2', lifecycle_stage='active', name='customer-sentiment-analysis', tags={}>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "MlflowException",
+     "evalue": "Detected out-of-date database schema (found version cc1f77228345, but expected bd07f7e963c5). Take a backup of your database, then run 'mlflow db upgrade <database_uri>' to migrate your database to the latest schema. NOTE: schema migration may result in database downtime - please consult your database's documentation for more detail.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mMlflowException\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Isaac\\codes\\personal\\mlops-zoomcamp-final-project\\training_job\\train.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Isaac/codes/personal/mlops-zoomcamp-final-project/training_job/train.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m mlflow\u001b[39m.\u001b[39mset_tracking_uri(\u001b[39m\"\u001b[39m\u001b[39msqlite:///mlflow.db\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Isaac/codes/personal/mlops-zoomcamp-final-project/training_job/train.ipynb#W1sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m mlflow\u001b[39m.\u001b[39;49mset_experiment(\u001b[39m\"\u001b[39;49m\u001b[39mcustomer-sentiment-analysis\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "File \u001b[1;32mc:\\Users\\Isaac\\miniconda3\\envs\\nlp\\lib\\site-packages\\mlflow\\tracking\\fluent.py:109\u001b[0m, in \u001b[0;36mset_experiment\u001b[1;34m(experiment_name, experiment_id)\u001b[0m\n\u001b[0;32m    101\u001b[0m \u001b[39mif\u001b[39;00m (experiment_name \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m experiment_id \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m) \u001b[39mor\u001b[39;00m (\n\u001b[0;32m    102\u001b[0m     experiment_name \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m experiment_id \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m    103\u001b[0m ):\n\u001b[0;32m    104\u001b[0m     \u001b[39mraise\u001b[39;00m MlflowException(\n\u001b[0;32m    105\u001b[0m         message\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mMust specify exactly one of: `experiment_id` or `experiment_name`.\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m    106\u001b[0m         error_code\u001b[39m=\u001b[39mINVALID_PARAMETER_VALUE,\n\u001b[0;32m    107\u001b[0m     )\n\u001b[1;32m--> 109\u001b[0m client \u001b[39m=\u001b[39m MlflowClient()\n\u001b[0;32m    110\u001b[0m \u001b[39mif\u001b[39;00m experiment_id \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    111\u001b[0m     experiment \u001b[39m=\u001b[39m client\u001b[39m.\u001b[39mget_experiment_by_name(experiment_name)\n",
+      "File \u001b[1;32mc:\\Users\\Isaac\\miniconda3\\envs\\nlp\\lib\\site-packages\\mlflow\\tracking\\client.py:70\u001b[0m, in \u001b[0;36mMlflowClient.__init__\u001b[1;34m(self, tracking_uri, registry_uri)\u001b[0m\n\u001b[0;32m     68\u001b[0m final_tracking_uri \u001b[39m=\u001b[39m utils\u001b[39m.\u001b[39m_resolve_tracking_uri(tracking_uri)\n\u001b[0;32m     69\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_registry_uri \u001b[39m=\u001b[39m registry_utils\u001b[39m.\u001b[39m_resolve_registry_uri(registry_uri, tracking_uri)\n\u001b[1;32m---> 70\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_tracking_client \u001b[39m=\u001b[39m TrackingServiceClient(final_tracking_uri)\n",
+      "File \u001b[1;32mc:\\Users\\Isaac\\miniconda3\\envs\\nlp\\lib\\site-packages\\mlflow\\tracking\\_tracking_service\\client.py:43\u001b[0m, in \u001b[0;36mTrackingServiceClient.__init__\u001b[1;34m(self, tracking_uri)\u001b[0m\n\u001b[0;32m     38\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mtracking_uri \u001b[39m=\u001b[39m tracking_uri\n\u001b[0;32m     39\u001b[0m \u001b[39m# NB: Fetch the tracking store (`self.store`) upon client initialization to ensure that\u001b[39;00m\n\u001b[0;32m     40\u001b[0m \u001b[39m# the tracking URI is valid and the store can be properly resolved. We define `store` as a\u001b[39;00m\n\u001b[0;32m     41\u001b[0m \u001b[39m# property method to ensure that the client is serializable, even if the store is not\u001b[39;00m\n\u001b[0;32m     42\u001b[0m \u001b[39m# self.store  # pylint: disable=pointless-statement\u001b[39;00m\n\u001b[1;32m---> 43\u001b[0m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mstore\n",
+      "File \u001b[1;32mc:\\Users\\Isaac\\miniconda3\\envs\\nlp\\lib\\site-packages\\mlflow\\tracking\\_tracking_service\\client.py:47\u001b[0m, in \u001b[0;36mTrackingServiceClient.store\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     45\u001b[0m \u001b[39m@property\u001b[39m\n\u001b[0;32m     46\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mstore\u001b[39m(\u001b[39mself\u001b[39m):\n\u001b[1;32m---> 47\u001b[0m     \u001b[39mreturn\u001b[39;00m utils\u001b[39m.\u001b[39;49m_get_store(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mtracking_uri)\n",
+      "File \u001b[1;32mc:\\Users\\Isaac\\miniconda3\\envs\\nlp\\lib\\site-packages\\mlflow\\tracking\\_tracking_service\\utils.py:156\u001b[0m, in \u001b[0;36m_get_store\u001b[1;34m(store_uri, artifact_uri)\u001b[0m\n\u001b[0;32m    155\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_get_store\u001b[39m(store_uri\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, artifact_uri\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m):\n\u001b[1;32m--> 156\u001b[0m     \u001b[39mreturn\u001b[39;00m _tracking_store_registry\u001b[39m.\u001b[39;49mget_store(store_uri, artifact_uri)\n",
+      "File \u001b[1;32mc:\\Users\\Isaac\\miniconda3\\envs\\nlp\\lib\\site-packages\\mlflow\\tracking\\_tracking_service\\registry.py:39\u001b[0m, in \u001b[0;36mTrackingStoreRegistry.get_store\u001b[1;34m(self, store_uri, artifact_uri)\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mmlflow\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mtracking\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39m_tracking_service\u001b[39;00m \u001b[39mimport\u001b[39;00m utils\n\u001b[0;32m     38\u001b[0m resolved_store_uri \u001b[39m=\u001b[39m utils\u001b[39m.\u001b[39m_resolve_tracking_uri(store_uri)\n\u001b[1;32m---> 39\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_get_store_with_resolved_uri(resolved_store_uri, artifact_uri)\n",
+      "File \u001b[1;32mc:\\Users\\Isaac\\miniconda3\\envs\\nlp\\lib\\site-packages\\mlflow\\tracking\\_tracking_service\\registry.py:49\u001b[0m, in \u001b[0;36mTrackingStoreRegistry._get_store_with_resolved_uri\u001b[1;34m(self, resolved_store_uri, artifact_uri)\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     44\u001b[0m \u001b[39mRetrieve the store associated with a resolved (non-None) store URI and an artifact URI.\u001b[39;00m\n\u001b[0;32m     45\u001b[0m \u001b[39mCaching is done on resolved URIs because the meaning of an unresolved (None) URI may change\u001b[39;00m\n\u001b[0;32m     46\u001b[0m \u001b[39mdepending on external configuration, such as environment variables\u001b[39;00m\n\u001b[0;32m     47\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m     48\u001b[0m builder \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mget_store_builder(resolved_store_uri)\n\u001b[1;32m---> 49\u001b[0m \u001b[39mreturn\u001b[39;00m builder(store_uri\u001b[39m=\u001b[39;49mresolved_store_uri, artifact_uri\u001b[39m=\u001b[39;49martifact_uri)\n",
+      "File \u001b[1;32mc:\\Users\\Isaac\\miniconda3\\envs\\nlp\\lib\\site-packages\\mlflow\\tracking\\_tracking_service\\utils.py:118\u001b[0m, in \u001b[0;36m_get_sqlalchemy_store\u001b[1;34m(store_uri, artifact_uri)\u001b[0m\n\u001b[0;32m    116\u001b[0m \u001b[39mif\u001b[39;00m artifact_uri \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    117\u001b[0m     artifact_uri \u001b[39m=\u001b[39m DEFAULT_LOCAL_FILE_AND_ARTIFACT_PATH\n\u001b[1;32m--> 118\u001b[0m \u001b[39mreturn\u001b[39;00m SqlAlchemyStore(store_uri, artifact_uri)\n",
+      "File \u001b[1;32mc:\\Users\\Isaac\\miniconda3\\envs\\nlp\\lib\\site-packages\\mlflow\\store\\tracking\\sqlalchemy_store.py:143\u001b[0m, in \u001b[0;36mSqlAlchemyStore.__init__\u001b[1;34m(self, db_uri, default_artifact_root)\u001b[0m\n\u001b[0;32m    139\u001b[0m SessionMaker \u001b[39m=\u001b[39m sqlalchemy\u001b[39m.\u001b[39morm\u001b[39m.\u001b[39msessionmaker(bind\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mengine)\n\u001b[0;32m    140\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mManagedSessionMaker \u001b[39m=\u001b[39m mlflow\u001b[39m.\u001b[39mstore\u001b[39m.\u001b[39mdb\u001b[39m.\u001b[39mutils\u001b[39m.\u001b[39m_get_managed_session_maker(\n\u001b[0;32m    141\u001b[0m     SessionMaker, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdb_type\n\u001b[0;32m    142\u001b[0m )\n\u001b[1;32m--> 143\u001b[0m mlflow\u001b[39m.\u001b[39;49mstore\u001b[39m.\u001b[39;49mdb\u001b[39m.\u001b[39;49mutils\u001b[39m.\u001b[39;49m_verify_schema(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mengine)\n\u001b[0;32m    145\u001b[0m \u001b[39mif\u001b[39;00m is_local_uri(default_artifact_root):\n\u001b[0;32m    146\u001b[0m     mkdir(local_file_uri_to_path(default_artifact_root))\n",
+      "File \u001b[1;32mc:\\Users\\Isaac\\miniconda3\\envs\\nlp\\lib\\site-packages\\mlflow\\store\\db\\utils.py:53\u001b[0m, in \u001b[0;36m_verify_schema\u001b[1;34m(engine)\u001b[0m\n\u001b[0;32m     51\u001b[0m current_rev \u001b[39m=\u001b[39m _get_schema_version(engine)\n\u001b[0;32m     52\u001b[0m \u001b[39mif\u001b[39;00m current_rev \u001b[39m!=\u001b[39m head_revision:\n\u001b[1;32m---> 53\u001b[0m     \u001b[39mraise\u001b[39;00m MlflowException(\n\u001b[0;32m     54\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mDetected out-of-date database schema (found version \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m, but expected \u001b[39m\u001b[39m%s\u001b[39;00m\u001b[39m). \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     55\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mTake a backup of your database, then run \u001b[39m\u001b[39m'\u001b[39m\u001b[39mmlflow db upgrade <database_uri>\u001b[39m\u001b[39m'\u001b[39m\u001b[39m \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     56\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mto migrate your database to the latest schema. NOTE: schema migration may \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     57\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mresult in database downtime - please consult your database\u001b[39m\u001b[39m'\u001b[39m\u001b[39ms documentation for \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m     58\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mmore detail.\u001b[39m\u001b[39m\"\u001b[39m \u001b[39m%\u001b[39m (current_rev, head_revision)\n\u001b[0;32m     59\u001b[0m     )\n",
+      "\u001b[1;31mMlflowException\u001b[0m: Detected out-of-date database schema (found version cc1f77228345, but expected bd07f7e963c5). Take a backup of your database, then run 'mlflow db upgrade <database_uri>' to migrate your database to the latest schema. NOTE: schema migration may result in database downtime - please consult your database's documentation for more detail."
+     ]
     }
    ],
    "source": [
@@ -47,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,55 +92,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('data/corpus_y.pickle', 'rb') as handle:\n",
+    "    corpus, y = pickle.load(handle)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "cv  = CV(max_features = 3000,ngram_range=(1,1))\n",
     "X_cv = cv.fit_transform(corpus).toarray()\n",
-    "y = y.values\n",
+    "# y = y.values\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_cv, y, test_size = 0.20, random_state = 0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "numpy.ndarray"
+       "((18112, 3000), (4529, 3000), (18112,), (4529,))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(y)"
+    "X_train.shape, X_test.shape, y_train.shape, y_test.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(numpy.ndarray, numpy.ndarray)"
+       "(18112,)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(X_train), type(y_train)"
+    "np.zeros((18112,)).shape"
    ]
   },
   {
